[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = "1.34.0"
lcmx = "0.1.4"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.2"
relative-path = "1.9.0"
